<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translate"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="230dp"
        android:layout_height="170dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/delete_stock"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1px"
                android:background="@color/line"
                android:visibility="gone" />

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:text="@string/test_deletes"
                android:textColor="@color/text"
                android:textSize="@dimen/size_14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1px"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/cancler"
                    android:textSize="@dimen/size_14sp" />

                <View
                    android:layout_width="@dimen/size_1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/sure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/text"
                    android:text="@string/sure"
                    android:textSize="@dimen/size_14sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>