<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/Material.Standard.Double"
    android:paddingRight="@dimen/Material.Standard.Double">
    <!--<ImageView-->
    <!--android:id="@+id/fragment_login_image_icon"-->
    <!--android:layout_width="36dp"-->
    <!--android:layout_height="36dp"-->
    <!--android:layout_marginTop="@dimen/Material.Standard.Sextuple"-->
    <!--android:src="@drawable/ic_icon"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--/>-->

    <TextView
        android:id="@+id/fragment_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/Material.Standard.Sextuple"
        android:text="@string/login_label"
        android:textColor="@color/btn_blue"
        android:textSize="@dimen/TextSize.Material.Title"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_login_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_label"
        android:layout_marginBottom="@dimen/Material.Standard.Double"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/Material.Standard.Triple">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Material.Standard.Sextuple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/name_img" />

            <EditText
                android:id="@+id/fragment_login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_account_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingLeft="@dimen/Material.Standard"
                android:paddingRight="@dimen/Material.Standard"
                android:textColor="@color/black_light" />
        </LinearLayout>
        <!--android:text="20171116"-->
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_login_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_username_container"
        android:layout_marginBottom="@dimen/Material.Standard.Double"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/Material.Standard.Double">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Material.Standard.Sextuple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/pwd_img" />

            <EditText
                android:id="@+id/fragment_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Material.Standard.Sextuple"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:paddingLeft="@dimen/Material.Standard"
                android:paddingRight="@dimen/Material.Standard"
                android:textColor="@color/black_light" />
        </LinearLayout>
        <!--android:text="2017111620171116"-->
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_login_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_password_container"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/Material.Standard.Double"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:cardBackgroundColor="@color/btn_blue">
        <!--android:foreground="?attr/selectableItemBackground"-->
        <Button
            android:id="@+id/fragment_login_login"
            style="@style/Text.Material.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="true"
            android:text="@string/login_login"
            android:textColor="@color/white_nearby"
            android:textSize="@dimen/TextSize.Material.Title" />
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_below="@+id/fragment_login_login_container"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:text="忘记密码?"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/btn_blue"
        android:gravity="center"/>

    <Button
        android:id="@+id/fragment_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/Material.Standard.Sextuple"
        android:layout_alignParentRight="true"
        android:layout_below="@id/fragment_login_login_container"
        android:background="@null"
        android:text="@string/login_forget"
        android:visibility="gone" />

    <Button
        android:id="@+id/fragment_login_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/Material.Standard.Sextuple"
        android:layout_below="@id/fragment_login_login_container"
        android:background="@null"
        android:text="@string/login_register"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/Material.Standard.Quadruple"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/login_footer" />
</RelativeLayout>