<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="16.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/checkout_order_total_label"
            android:textColor="#8a000000"
            android:textIsSelectable="true"
            android:textSize="@dimen/TextSize.Material.Subhead"/>

        <TextView
            android:id="@+id/view_order_total_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Material.Standard"
            android:gravity="right"
            android:textColor="#ff646464"
            android:textIsSelectable="true"
            android:textSize="@dimen/TextSize.Material.Subhead"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_order_total_discount_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Material.Standard"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/checkout_order_discount_label"
            android:textColor="@color/btn_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/TextSize.Material.Subhead"/>

        <TextView
            android:id="@+id/view_order_total_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:gravity="right"
            android:textColor="@color/btn_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/TextSize.Material.Subhead"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Material.Standard"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="@string/checkout_order_total_due_label"
            android:textColor="@color/btn_dark"
            android:textIsSelectable="true"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/view_order_total_due"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:layout_weight="1.0"
            android:gravity="center|right"
            android:textColor="@color/btn_dark"
            android:textIsSelectable="true"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>